[package]
name = "geph5-obfs-test"
version = "0.1.0"
edition = "2021"

[dependencies]
sillad = { path = "../../libraries/sillad" }
sillad-sosistab3 = { path = "../../libraries/sillad-sosistab3" }
sillad-native-tls = { path = "../../libraries/sillad-native-tls" }
smolscale = "0.4"
smol = "1.3"
async-native-tls = "0.5"
futures-lite = "1.13"
futures-util = { version = "0.3", features = ["io"] } # Added for the split functionality
native-tls = "0.2"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
time = "0.3"
rcgen = "0.13"
async-io = "1.13"
bytes = "1.0"